<resources>


    <string name="site_utfpr">www.utfpr.edu.br</string>
    <string name="email_autor"><u>daniellarodrigues@alunos.utfpr.edu.br</u></string>
    <string name="app_name">Maratonar</string>
    <string name="limpar">Clear</string>
    <string name="salvar">Save</string>
    <string name="titulo">Title</string>
    <string name="categria">Category</string>
    <string name="status">Status</string>
    <string name="as_entradas_foram_apagadas">Entries have been deleted!</string>
    <string name="faltou_informar_o_titulo">You forgot to inform the Title!</string>
    <string name="faltou_informar_a_categoria">" 25 / 5.000 You forgot to inform the Category!"</string>
    <string name="titulotoast">Title:</string>
    <string name="categoriatoast">Category:</string>
    <string name="o_titulo_deve_conter_apenas_letras">The title must contain only letters!</string>
    <string name="a_categoria_deve_conter_apenas_letras">The category must contain only letters!</string>
    <string name="prioridade">Priority</string>
    <string name="nao_prioridade">Not a Priority!</string>
    <string name="assistido">Assisted</string>
    <string name="nao_assistido">Not Assisted</string>
    <string name="faltou_preencher_o_status">You forgot to fill in the Status!</string>
    <string name="status_filme">Movie Status:</string>
    <string name="classificacao_etaria">Age Rating:</string>
    <string name="_10_a_12_anos">10 to 12 years old</string>
    <string name="_14_a_16_anos">14 to 16 years old</string>
    <string name="maiores_de_18_anos">Over 18 years old</string>
    <string name="livre">Free</string>
    <string name="selecione_a_classificacao_etaria">Select age rating!</string>
    <string name="classificacao_etariatoast">Age Rating:</string>
    <string name="logo_maratonar">Marathon Logo</string>
    <string name="descricao">Movie and Series Registration Application!</string>
    <string name="Autoria">Author: <a href="https://github.com/DannyRodrygues">Daniella Oliveira Rodrigues</a></string>
    <string name="sobre">On:</string>
    <string name="controle_de_filmes">Movie Control</string>
    <string name="cadastro_filmes">Movie Registration</string>
    <string name="adicionar">To add</string>
    <string name="nenhum_aplicativo_abriu_paginas_web">No application opened WEB pages</string>
    <string name="nenhum_aplicativo_para_enviar_o_e_mail">No application to send the email.</string>
    <string name="contato_pelo_aplicativo">Contact by App</string>
    <string name="curso">Specialization in Java Technology</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="editar_filme">Edit Movie</string>
    <string name="sugerir_classificacao">Suggest Rating</string>
    <string name="ordenacao">Ordering</string>
    <string name="restaurar_padroes">Restore Defaults</string>
    <string name="as_configura_es_retornaram_para_o_padr_o_de_instala_o">Settings have returned to installation default!!</string>
    <string name="novo_filme">New Movie</string>
    <string name="aviso">Warning</string>
    <string name="confirmacao">Confirmation</string>
    <string name="sim">YES</string>
    <string name="nao">NO</string>
    <string name="deseja_deletar">Do you want do delete?\n\"%1s\"</string>
    <string name="deseja_retornar_padroes">Do you want do restore defaults?</string>
    <string name="desfazer">Undo</string>
    <string name="alteracao_realizada">Data update done</string>
    <string name="erro_ao_tentar_inserir">Error trying to insert!!</string>
    <string name="erro_ao_tentar_alterar">Error trying to update!!</string>
    <string name="erro_ao_tentar_deletar">Error trying do delete!!</string>
    <string name="data_visualizada">Date Viewed</string>
    <string name="faltou_informar_a_data_visualizada">Missed to inform the Visualized Date</string>
    <string name="data_assistido_valor">Date Viewed:</string>
    <string name="cancelar">Cancel</string>
    <string name="anotacoes_do_filme">Notes about %1$s</string>
    <string name="deseja_deletar_anotacao">Do you want to delete this note?</string>
    <string name="texto_nao_pode_ser_vazio">The text cannot be empty</string>
    <string name="nova_anotacao">New Note</string>
    <string name="edite_texto_anotacao">Edit Note</string>
    <string name="anotacoes">Notes (%1$d)</string>

</resources>